// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Danish language picker renders without 💥 1`] = `
<div
  class="css-1prqaxz-Wrapper e1g7xtvp0"
>
  <div
    class="css-cddkmz-ActiveOption e1g7xtvp1"
  >
    Da
  </div>
  <span
    class="css-au3ti5-Divider e1g7xtvp3"
  />
  <a
    class="css-1odoamw-LinkOption e1g7xtvp2"
    href="/dk-en/new-member"
  >
    En
  </a>
</div>
`;

exports[`Norwegian language picker renders without 💥 1`] = `
<div
  class="css-1prqaxz-Wrapper e1g7xtvp0"
>
  <div
    class="css-cddkmz-ActiveOption e1g7xtvp1"
  >
    No
  </div>
  <span
    class="css-au3ti5-Divider e1g7xtvp3"
  />
  <a
    class="css-1odoamw-LinkOption e1g7xtvp2"
    href="/no-en/new-member"
  >
    En
  </a>
</div>
`;

exports[`Swedish language picker renders without 💥 1`] = `
<div
  class="css-1prqaxz-Wrapper e1g7xtvp0"
>
  <div
    class="css-cddkmz-ActiveOption e1g7xtvp1"
  >
    Sv
  </div>
  <span
    class="css-au3ti5-Divider e1g7xtvp3"
  />
  <a
    class="css-1odoamw-LinkOption e1g7xtvp2"
    href="/se-en/new-member"
  >
    En
  </a>
</div>
`;
